#6 - kubernetes yaml start